--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-ray": "^1.37"
+        "spatie/laravel-mailcoach-mailer": "^1.3",
+        "spatie/laravel-ray": "^1.37",
+        "spatie/mjml-php": "^1.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
