--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "google/apiclient": "^2.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-mailcoach-mailer": "^1.3",
         "spatie/laravel-ray": "^1.37",
         "spatie/mjml-php": "^1.2"
