--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,12 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+MAILCOACH_TOKEN=
+
+GOOGLE_CALENDAR_AUTH_CODE=
+GOOGLE_CALENDAR_ID=
+
+MONEYBIRD_TOKEN=
+MONEYBIRD_ADMINISTRATION_ID=
+MONEYBIRD_LEDGER_ACCOUNT_ID=
