--- a/composer.json
+++ b/composer.json
@@ -2,15 +2,18 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
-        "google/apiclient": "^2.0",
-        "laravel/framework": "^11.9",
+        "google/apiclient": "^2.18",
+        "laravel/framework": "^11.26",
         "laravel/tinker": "^2.9",
-        "spatie/laravel-activitylog": "^4.8",
+        "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-mailcoach-mailer": "^1.3",
         "spatie/laravel-ray": "^1.37",
         "spatie/mjml-php": "^1.2"
