--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.19",
         "alpinejs": "^3.14.1",
-        "autoprefixer": "^10.4.19",
+        "autoprefixer": "^10.4.22",
         "axios": "^1.7.2",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.4",
+        "postcss": "^8.5.6",
+        "postcss-nesting": "^13.0.2",
+        "tailwindcss": "^3.4.18",
         "vite": "^5.2.0"
     },
     "dependencies": {
